2011-01-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80ralloc2.cc:
	  Reg name cleanup.

2011-01-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80ralloc2.cc:
	  Preparaton for use of a and hl in the new allocator.

2011-01-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCtree_dec.hpp:
	  Fixed const-correctness of iterators.

2011-01-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/ralloc2.cc:
	  Fixed confusion of std::map/std::multimap iterators.

2011-01-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCtree_dec.hpp
	  Fixed std::vector<bool> active initalization in tree_decomposition_from_elimination_ordering()

2011-01-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Made operands in assign_cost() const.

2011-01-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCralloc.hpp: do not include "sdccconf.h" directly, it does not
	  exist when building with MSVC. Let it come through SDCCglobl.h

2011-01-17 Borut Razem <borut.razem AT siol.net>

	* Merged from trunk

2011-01-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.h,
	  src/SDCCicode.c,
	  src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Split validateOpType() into const and non-const version.

2011-01-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp:
	  Some documenting comments.

2011-01-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc:
	  Fixed some forgotten debug statements.

2011-01-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Fixed the allocator for gbz80.

2011-01-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCtree_dec.hpp,
	  src/z80/tree_dec.hh,
	  src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Moved some generic parts of the new allocator out of the z80 directory.
